gccida/c3/debug_bitmap_file
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/debug_bitmap_file/src/bitmap.c:1231:16: error: use of undeclared identifier 'off_685EAB'
fprintf( file, off_685EAB, ( unsigned int)( j + ( i->indx << 7))); 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/debug_bitmap_file/src/bitmap.c:1245:16: error: use of undeclared identifier 'off_685EAB'
fprintf( file, off_685EAB, ( unsigned int)( k + ( i->indx << 7) + 64)); 
               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/debug_bitmap_file/src/obj/bitmap.o] Error 1
